css/logo-nav.css
/* ... */
.notebook-icon {
    height: auto;
    margin-right: 12px;
    width: 60px;
}

/* Give space between the notebook features (4 features) on front page and the     img + description */
.notebook-features {
    margin-top: 32px;
}

.notebook-features p{
    padding-top: 16px;
}

.nb-desc {
    font-weight: 400;
    line-height: 1.5;
    margin-top: 20px;
    margin-bottom: 32px;
}

/* Install prompt on front page */
.install-prompt {
    background-color: #f5f5f5;
    border-bottom-color: #e0e0e0;
    border-left-style: none;
    border-style: solid;
    border-top-color: #e0e0e0;
    border-width: thin;
    border-right: 0px;
    padding: 24px 0 42px 0;
    text-align: center;
}

.prompt-header {
    margin-bottom: 16px;
}

/* Companies section for only "Currently in use" (this section acts differently than customer logos in the "About" section of the site) */

/*Section-center is used to center the companies on the home page & get rid of padding on left associated with ul*/
.section-center {
    text-align: center;
}

.companies li {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: inline-block;
    padding: 2%;
    vertical-align: middle;
    width: 18%;
}

.companies .col img{
    display: block;
    width: 100%;
    max-height: 60px;
}

.greydout {
    -webkit-transition: all .05s ease;
    -moz-transition: all .05s ease;
    -ms-transition: all .05s ease;
    -o-transition: all .05s ease;
    transition: all .05s ease;
}

.greydout:hover {
    -webkit-opacity: 0.65;
    -moz-opacity: 0.65;
    opacity: 0.65;
}

/* JupyterHub section on front page */
/* Feature-middle is for the JupyterHub features that are in the middle that need to be offset to sit on the track */
.feature-middle {
    margin-top: 40px;
}

.hubfeature {
    text-align: center;
}

.hubfeature img {
    margin: 0 auto;
}

.hubfeatures {
    background: url("../assets/line.svg");
    background-position:  top center;
    background-repeat: no-repeat;
    /* Padding that is used to make the hubfeature circles sit on track */
    padding-top: 48px;
}

/* Architecture section on front page */
/* Some padding above the cards */
.architecturecontent {
    padding-top: 40px;
}

.card {
    display: block;
    height: 100%;
    text-align: center;
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 5px;
    height: 300px;
    text-align: center;
    display: flex;
    width: 250px;
    padding-top: 25px;
    padding-bottom: 25px;
    margin-bottom: 25px;
    margin-left: auto;
    margin-right: auto;
}

.architecturecontent  .card {
    height: 400px;
   }

/* Styling for each card in the architecture section on front page. Each card needs it's own front class to work with the javascript associated with the cards */
.card .front p{
    margin-top: 3rem;
}
.card .front {
    position: absolute;
    text-align: center;
    max-width: 225px;
    margin-left: 12.5px;
    height: 275px;
}

/*About Page */
/* Used to position the replacement SVG image when a screen is too small for the D3 visualization of contributors */
#visualization svg{
    display: block;
    margin: 0 auto;
}



/* Used to style the clickable tabs within the governance section */
.clickable {
    cursor: default;
    display: inline-block;
    font-size: 20px;
    margin-bottom: 10px;
    margin-left: 20px;
    text-decoration: none;
}

.clickable:hover {
    color: #E46E2E
}

/* Active state when a tab in the governance section is selected */
.menuClicked {
    color: #E46E2E;
}

/* Used to style the description of a particular tab within the governance section */
.governance-desc {
    border-color: black;
    border-color: #979797;
    border-radius: 5px;
    border-style: solid;
    border-width: thin;
    min-height: 100px;
    padding: 30px;
    transition: all 1s;
}

/* Donate Page */
.donate-box {
    background-color: white;
    border-color: #e0e0e0;
    border-radius: 2px;
    border-style: solid;
    border-width: 1px;
    margin-top: 32px;
    padding: 32px;
}

#donate-formatting {
    width: 100%;
    text-align: center;
}

#donate-formatting a {
    width: 250px;
    box-sizing: border-box;
    display: inline-block;
    margin-top: 16px;
    margin-bottom: 16px;
}

#numfocus-logo {
    height: 100px;
    width: auto;
    margin: auto;
}

/*Community Resources Page */

/* Resource section is used to create a new resource on the community resources page. */
.resource-section {
    border-bottom: 1px solid #E8E8E8;
    padding: 16px;
    vertical-align: middle;
}

/* Used to specify that the last resource should not have a border underneath it's content */
.resource-section:last-child {
    border-bottom: none;
}

.resource-text {
    text-align: left;
    vertical-align: middle;
}

.resource-logo {
    display: block;
    height: 80px !important;
    margin: 0 auto;
}

.resource-name {
     margin-top: 6px;
}

.resource-button {
    margin-top: 32px;
    text-align: center;
}

.resource-button a {
    background-color: #E46E2E;
    border-radius: 2px;
    color: white;
    letter-spacing: 1px;
    padding: 13px 60px;
    text-decoration: none;
    -webkit-transition: .2s;
}

.resource-button a:hover {
    background-color: #F27624;
}

.navbar-toggle > .white-icon-bar {
    background-color: black;
}

.navbar-fixed-top .navbar-collapse {
    max-height: 440px;
}

.jupytercon-button {
    padding: 16px;
}

/* Bootstrap Breakpoint Media Queries */
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .section-white, .section-grey {
    padding: 5% 0;
  }
}

@media (max-width: 1200px) {
    .nb-highlight-text {
        margin-top: 32px;
    }
    .notebook-features .language-set h2{
        padding-top: 0;
    }
    .notebook-features #feature {
        padding-top: 4px;
    }
    .notebook-preview p {
        font-size: 15pt;
        line-height: 25pt;
    }
    .companies li {
        width: 23%;
    }
}
/* ... */

